Delete old, non-J11 client